manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-service
spec:
  selector:
    app: todoapp
  ports:
  - port: 80
    targetPort: 80
    name: http
  type: ClusterIP
