manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress
  labels:
    app.kubernetes.io/name: todo-app-ingress
spec:
  rules:
  - host: achinta.site
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: todo-app-service
            port: 
              number: 80
